--- a/src/components/performances/Performances.css
+++ b/src/components/performances/Performances.css
@@ -36,6 +36,29 @@
   margin-bottom: 30px;
 }
 
+.performances-container .description .paypal-nutcracker {
+  margin: 30px auto;
+  display: block;
+  text-align: center;
+}
+
+.performances-container .description .paypal-nutcracker select {
+  height: 40px;
+  border: 1px;
+  background-color: #0f70ba;
+  color: #ffffff;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.performances-container .description .paypal-nutcracker form {
+  display: inline-block;
+}
+
+.performances-container .description .paypal-nutcracker input[type="image"]:focus {
+  outline: 0;
+}
+
 .performances-container span.sub-title-specs {
   display: block;
   font-size: 18px;
