update summer page

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -18,7 +18,7 @@ a.go-to-registration {
 }
 
 .home-container .home-img {
-  background: url('../../images/site/home.png') center no-repeat;
+  background: url('../../images/site/website-summer-image.jpg') center no-repeat;
   background-size: contain;
   width: 100%;
   height: 500px;
