--- a/src/components/summer-program/SummerProgram.css
+++ b/src/components/summer-program/SummerProgram.css
@@ -89,12 +89,13 @@
   font-weight: bolder;
   font-size: 20px;
   margin: 0 auto;
-  text-align: center;
-  padding: 8px;
+  text-align: left;
+  padding-top: 8px;
 }
 
 .summer-program-container .summer-content .date {
   text-decoration: underline;
+  font-size: 16px;
 }
 
 /* Button */
