--- a/src/components/summer-program/SummerProgram.css
+++ b/src/components/summer-program/SummerProgram.css
@@ -9,6 +9,7 @@
 .summer-program-container .summer-poster {
   float: left;
   width: 50vw;
+  margin-bottom: 20px;
 }
 
 .summer-program-container .summer-poster img {
@@ -35,6 +36,19 @@
   width: 45%;
 }
 
+/* Schedule On right side of the page */
+.summer-program-container .left-container {
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+.summer-program-container .summer-schedule .column-1.left {
+  width: 20%;
+  display: inline-table;
+  float: none;
+}
+
+
 /* Clear floats after the columns */
 
 .summer-schedule:after {
@@ -50,7 +64,7 @@
   margin: 0;
   border: 0.5px solid #c7c8c9;
   border-bottom: none;
-  height: 50px;
+  height: 70px;
 }
 
 .summer-program-container .summer-schedule p:last-child {
@@ -79,22 +93,34 @@
   margin: 15px;
 }
 
-.summer-program-container .summer-content .title {
+.summer-program-container .title {
   text-align: center;
   font-weight: bolder;
   font-size: 28px;
+  margin: 0;
+  padding: 0;
 }
 
 .summer-program-container .summer-content .sub-title {
   font-weight: bolder;
   font-size: 20px;
   margin: 0 auto;
-  text-align: center;
-  padding: 8px;
+  text-align: left;
+  padding-top: 8px;
 }
 
 .summer-program-container .summer-content .date {
   text-decoration: underline;
+  font-size: 16px;
+}
+
+.summer-program-container .registration-wave {
+  text-align: center;
+  padding: 0;
+  margin: 0 auto;
+  font-weight: bold;
+  display: table;
+  color: #963939;
 }
 
 /* Button */
@@ -110,15 +136,62 @@
     float: none;
     width: 100vw;
   }
+
   .summer-program-container .summer-schedule {
     float: none;
     width: 100vw;
   }
+
   .summer-program-container .summer-content-wrap {
     float: none;
     width: 100vw;
   }
 }
+
+/**************************** Jack Rabbit Class Listings Styles ************************************/
+.summer-program-registration-container {
+  margin-top: 30px;
+}
+
+.summer-program-registration-container {
+  width: 90%;
+  display: table;
+  margin: 30px auto 0 auto;
+  text-align: center;
+}
+
+.summer-program-registration-container .heading {
+  font-size: 28px;
+  text-align: center;
+  margin-bottom: -5px;
+  padding: 0;
+}
+
+.summer-program-registration-container .subtitle-listing {
+  text-align: center;
+  display: block;
+}
+
+/* table styles*/
+.summer-program-registration-container table.responsive-table {
+  padding-top: 0;
+}
+
+.summer-program-registration-container table.responsive-table td,
+.summer-program-registration-container table.responsive-table th {
+  border: solid 1px #1e1e1e;
+  background-color: #f7f9fa !important;
+  height: 33px;
+  font-size: 14px;
+}
+
+.summer-program-registration-container a.jrRegLink {
+  text-decoration: none;
+  color: #d9534f;
+}
+
+/**************************** END of Jack Rabbit Class Listings Styles ************************************/
+
 
 /* 
   ##Device = Tablets, Ipads (landscape)
@@ -126,24 +199,54 @@
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
   .summer-program-container .summer-schedule p {
-    height: 65px;
+    height: 90px;
   }
 }
 
 @media screen and (max-width: 568px) {
   .summer-program-container .summer-poster {
     float: none;
-    width: 100vw;
+    width: 100%;
   }
+
   .summer-program-container .summer-schedule {
     float: none;
-    width: 100vw;
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
   }
+
   .summer-program-container .summer-content-wrap {
     float: none;
-    width: 100vw;
+    width: 100%;
   }
+
   .summer-program-container .summer-schedule p {
-    height: 85px;
+    height: 145px;
+  }
+
+  .summer-program-container .summer-schedule .column-1.left {
+    width: 50%
+  }
+
+  /* Jack Rabbit Listings */
+  .summer-program-registration-container table.responsive-table td,
+  .summer-program-registration-container table.responsive-table th {
+    border: none;
+  }
+
+  .summer-program-registration-container .heading {
+    font-size: 22px !important;
+    font-weight: bold;
+  }
+}
+
+/* ----------- iPad Pro ----------- */
+
+/* Portrait*/
+
+@media only screen and (min-device-width: 1024px) and (max-device-height: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+  .summer-program-container .summer-schedule p {
+    height: 90px;
   }
 }
