--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -3,7 +3,7 @@
 }
 
 .contact-container:after {
-  content: " ";
+  content: ' ';
   display: block;
   clear: both;
 }
@@ -11,20 +11,6 @@
 .contact-container .contact-img {
   background: url('../../images/bkgrnd/contact.jpg') no-repeat;
   background-size: 100% auto;
-}
-
-.contact-container .content {
-  border: none;
-}
-
-.contact-container h1 {
-  padding: 30px 0 10px 0;
-}
-
-.contact-container p.heading {
-  font-size: 40px;
-  text-align: center;
-  padding: 20px 0 10px 0;
 }
 
 .contact-container div#wrap {
@@ -46,7 +32,8 @@
   text-align: center;
   display: block;
   width: 300px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+    'Helvetica Neue', sans-serif;
 }
 
 .contact-container #wrap .bt:visited {
@@ -84,7 +71,7 @@
 
 .contact-container .map-wrap iframe {
   width: 500px;
-  height: 450px
+  height: 450px;
 }
 
 .contact-container .mailing-address p {
