--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -18,7 +18,8 @@ a.go-to-registration {
 }
 
 .home-container .home-img {
-  background: url('../../images/site/website-summer-image.jpg') center no-repeat;
+  /* background: url('../../images/site/website-summer-image.jpg') center no-repeat; */
+  background: url('../../images/site/home.png') center no-repeat;
   background-size: contain;
   width: 100%;
   height: 500px;
@@ -48,7 +49,10 @@ a.go-to-registration {
   margin: 0;
 }
 
-.home-container .image-links-wrap .new-classes:hover, .home-container .image-links-wrap .calendar:hover, .home-container .image-links-wrap .performances:hover, .home-container .image-links-wrap .handbook-policies:hover {
+.home-container .image-links-wrap .new-classes:hover,
+.home-container .image-links-wrap .calendar:hover,
+.home-container .image-links-wrap .performances:hover,
+.home-container .image-links-wrap .handbook-policies:hover {
   opacity: 0.6;
 }
 
@@ -116,10 +120,12 @@ a.go-to-registration {
     margin-bottom: 10px;
     padding-right: 0;
   }
-  .home-container .image-links-wrap .new-classes, .home-container .image-links-wrap .performances {
+  .home-container .image-links-wrap .new-classes,
+  .home-container .image-links-wrap .performances {
     padding-right: 5px;
   }
-  .home-container .image-links-wrap .calendar, .home-container .image-links-wrap .handbook-policies {
+  .home-container .image-links-wrap .calendar,
+  .home-container .image-links-wrap .handbook-policies {
     padding-left: 5px;
   }
 }
@@ -128,7 +134,8 @@ a.go-to-registration {
 
 /* Landscape*/
 
-@media only screen and (min-device-width: 1366px) and (max-device-height: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {}
+@media only screen and (min-device-width: 1366px) and (max-device-height: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
+}
 
 /* Portrait*/
 
@@ -173,17 +180,19 @@ a.go-to-registration {
   .home-container .image-links-wrap .img-link img {
     width: 340px;
   }
-  .home-container .image-links-wrap .new-classes, .home-container .image-links-wrap .performances {
+  .home-container .image-links-wrap .new-classes,
+  .home-container .image-links-wrap .performances {
     padding-right: 10px;
   }
-  .home-container .image-links-wrap .calendar, .home-container .image-links-wrap .handbook-policies {
+  .home-container .image-links-wrap .calendar,
+  .home-container .image-links-wrap .handbook-policies {
     padding-left: 10px;
   }
 }
 
 /* iphone X */
 
-@media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation:landscape) {
+@media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape) {
   .home-container .home-img {
     width: 760px;
     height: 300px;
@@ -244,10 +253,12 @@ a.go-to-registration {
   .home-container .image-links-wrap .img-link img {
     width: 252px;
   }
-  .home-container .image-links-wrap .new-classes, .home-container .image-links-wrap .performances {
+  .home-container .image-links-wrap .new-classes,
+  .home-container .image-links-wrap .performances {
     padding-right: 6px;
   }
-  .home-container .image-links-wrap .calendar, .home-container .image-links-wrap .handbook-policies {
+  .home-container .image-links-wrap .calendar,
+  .home-container .image-links-wrap .handbook-policies {
     padding-left: 6px;
   }
   .abt-nutcracker-container div {
