--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,9 @@ body {
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 16px;
   color: #000000;
+  --small-padding: 8px;
+  --medium-padding: 12px;
+  --large-padding: 24px;
 }
 
 select.form-control,
